Fix contrast error on delete button

--- a/src/styles/_ShoppingBag.scss
+++ b/src/styles/_ShoppingBag.scss
@@ -101,7 +101,7 @@
 
   .item__delete {
     font-size: 1.5rem;
-    color: v.$ternary-accent-color;
+    color: v.$secondary-accent-color;
     cursor: pointer;
   }
 
