--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -633,7 +633,7 @@ body {
 }
 .item .item__delete {
   font-size: 1.5rem;
-  color: #D9CFC9;
+  color: #5d5451;
   cursor: pointer;
 }
 .item .item__details {
